Add examples to steer fuzzer
